app/rs/src/renderer.rs

// This file was generated by AI (GitHub Copilot) and is NOT APPLICABLE for copyright.
// This is part of the threetwi project, a fork of twoyi (https://github.com/twoyi/twoyi).

//! OpenGL renderer bindings for legacy mode
//! These bindings interface with libOpenglRender.so

#[allow(dead_code)]
#[cfg(feature = "legacy")]
#[link(name = "OpenglRender")]
extern "C" {
    pub fn destroyOpenGLSubwindow() -> ::std::os::raw::c_int;

    pub fn repaintOpenGLDisplay();

    pub fn setNativeWindow(arg1: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;

    pub fn resetSubWindow(
        p_window: *mut ::std::os::raw::c_void,
        wx: ::std::os::raw::c_int,
        wy: ::std::os::raw::c_int,
        ww: ::std::os::raw::c_int,
        wh: ::std::os::raw::c_int,
        fbw: ::std::os::raw::c_int,
        fbh: ::std::os::raw::c_int,
        dpr: f32,
        zRot: f32,
    ) -> ::std::os::raw::c_int;

    pub fn startOpenGLRenderer(
        win: *mut ::std::os::raw::c_void,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        xdpi: ::std::os::raw::c_int,
        ydpi: ::std::os::raw::c_int,
        fps: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;

    pub fn removeSubWindow(arg1: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
    
    /// Start the OpenGL renderer in headless mode (no window)
    /// This is used for legacy server mode
    pub fn startOpenGLRendererHeadless(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        xdpi: ::std::os::raw::c_int,
        ydpi: ::std::os::raw::c_int,
        fps: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}

/// Start the OpenGL renderer in legacy mode
#[cfg(feature = "legacy")]
pub fn start_legacy_renderer(width: i32, height: i32, dpi: i32, fps: i32) -> Result<(), String> {
    use log::info;
    
    info!("Starting legacy OpenGL renderer: {}x{} @ {}dpi, {}fps", width, height, dpi, fps);
    
    let result = unsafe {
        startOpenGLRendererHeadless(width, height, dpi, dpi, fps)
    };
    
    if result == 0 {
        Ok(())
    } else {
        Err(format!("Failed to start OpenGL renderer: error code {}", result))
    }
}

/// Stub for when legacy feature is not enabled
#[cfg(not(feature = "legacy"))]
pub fn start_legacy_renderer(_width: i32, _height: i32, _dpi: i32, _fps: i32) -> Result<(), String> {
    Err("Legacy mode is not enabled. Rebuild with --features legacy".to_string())
}
